[package]
name = "bullet_hell_backend"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web フレームワーク
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# データベース
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"] }

# Redis
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }

# シリアライゼーション
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# ユーティリティ
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
anyhow = "1.0"
thiserror = "1.0"

# ロギング
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# 環境変数
dotenvy = "0.15"

# edition2024 問題の回避（Rust 1.83 との互換性）
home = "=0.5.9"
base64ct = "=1.6.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
